# adops-mcp

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
examples/: demo.md  sample_rules.txt
src/adops_mcp/: __init__.py  __main__.py  config.py  models.py  safety.py  server.py
src/adops_mcp/backends/: __init__.py  base.py  mock.py  taboola.py
src/adops_mcp/rules/: __init__.py  engine.py  schema.py
tests/: test_engine.py  test_mock_backend.py  test_safety.py  test_schema.py
